--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ go:
 - 1.7
 
 before_install:
-  - wget https://github.com/google/protobuf/releases/download/v3.2.0/protoc-3.2.0-linux-x86_64.zip /tmp/protoc.zip
+  - curl -L https://github.com/google/protobuf/releases/download/v3.2.0/protoc-3.2.0-linux-x86_64.zip -o /tmp/protoc.zip
   - mkdir /tmp/protoc
   - cd /tmp/protoc && unzip ../protoc.zip
   - export PATH=$PATH:/tmp/protoc/bin
