--- a/pre-commit-go.yml
+++ b/pre-commit-go.yml
@@ -22,6 +22,8 @@ modes:
           min_coverage: 1
           max_coverage: 100
         per_dir: {}
+        ignore_path_patterns:
+          - sar/sardata/toc/*.pb.go
       gofmt:
       - {}
       goimports:
